coupon/src/main/java/org/example/coupon/infra/error/ErrorCode.java
package org.example.coupon.infra.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {
    HttpStatus getHttpStatus();
    String getDetail();
}
